# Geniusnt_media_player

./: CMakeLists.txt  Main.cpp  README.md  player_ctl.cpp  protocol.h  shell.nix
